--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,18 @@
 .App-link {
   color: #09d3ac;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+.id{
+  border-bottom: 0px;
+  border-right: 1px solid #ddd;
+  padding-right: 2px;}
+/* }  */
